k8s/app/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: suite-backend
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.habilispro.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: suite-backend
                port:
                  number: 4000
